mele probability commentary

--- a/test.ipynb
+++ b/test.ipynb
@@ -548,7 +548,7 @@
    "outputs": [],
    "source": [
     "# beetle universe laws:\n",
-    "#     - male/female ratio (mfr)\n",
+    "#     - male/female ratio - male probability (mfr)\n",
     "#     - lifespan (lfsp, mean and var)\n",
     "#     - initial population age (age, min and max)\n",
     "#     - fertility ratio (fr)\n",
@@ -558,7 +558,7 @@
     "#     - random death (chance)\n",
     "# fly universe laws parameters\n",
     "fly_params = {\n",
-    "                'mfr': 0.5,\n",
+    "                'mfr': 0.32,\n",
     "                'lm': 20,\n",
     "                'lv': 3,\n",
     "                'amin': 14,\n",
@@ -2329,7 +2329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   },
   "toc": {
    "colors": {
