Made a small set of instructions to convert our current data files to pandas dataframes and began bayes cost function implementation (issue: which values for A,n to use and where to get P(n)?)

--- a/test.ipynb
+++ b/test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {
     "collapsed": true
    },
@@ -23,7 +23,8 @@
     "import os\n",
     "import matplotlib.pyplot as plt\n",
     "from itertools import *\n",
-    "import scipy.integrate as integrate"
+    "import scipy.integrate as integrate\n",
+    "from math import factorial"
    ]
   },
   {
@@ -85,7 +86,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# implements the basic features of our creatures.\n",
@@ -603,7 +606,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# universe laws definition\n",
@@ -2293,6 +2298,193 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Convert the text file into csv format using pandas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file1 = 'BrocasP-No-Area.txt'\n",
+    "file2 = 'Densidade_sem_cotesia-bin_02.txt'\n",
+    "file = file1\n",
+    "\n",
+    "with open(os.path.join('data', file1)) as f:\n",
+    "    array = [[float(x) for x in line.split()] for line in f]\n",
+    "    df_n_A = pd.DataFrame(data=array, columns=['moth_p','n','A'])\n",
+    "    \n",
+    "with open(os.path.join('data', file2)) as f:\n",
+    "    array = [[float(x) for x in line.split()] for line in f]\n",
+    "    df_p = pd.DataFrame(data=array, columns=['p','P_p'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(os.path.join('tests', 'outputs', 'simul_results_0.csv'))\n",
+    "#df[['fly-living', 'fly-dead', 'fly-randomly_killed', 'fly-old_age_killed', 'fly-adults', 'fly-parents', 'fly-newborn']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Poisson and Bayes testing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 0.737951807\n",
+      "0.02 0.09437751\n",
+      "0.04 0.047188755\n",
+      "0.06 0.032128514\n",
+      "0.08 0.016064257\n",
+      "0.1 0.015060241\n",
+      "0.12 0.011044177\n",
+      "0.14 0.014056225\n",
+      "0.16 0.009036145\n",
+      "0.18 0.002008032\n",
+      "0.2 0.006024096\n",
+      "0.22 0.001004016\n",
+      "0.24 0.001004016\n",
+      "0.26 0.001004016\n",
+      "0.28 0.0\n",
+      "0.3 0.001004016\n",
+      "0.32 0.0\n",
+      "0.34 0.0\n",
+      "0.36 0.0\n",
+      "0.38 0.0\n",
+      "0.4 0.002008032\n",
+      "0.42 0.001004016\n",
+      "0.44 0.002008032\n",
+      "0.46 0.0\n",
+      "0.48 0.0\n",
+      "0.5 0.0\n",
+      "0.52 0.0\n",
+      "0.54 0.0\n",
+      "0.56 0.0\n",
+      "0.58 0.0\n",
+      "0.6 0.0\n",
+      "0.62 0.0\n",
+      "0.64 0.0\n",
+      "0.66 0.0\n",
+      "0.68 0.0\n",
+      "0.7 0.001004016\n",
+      "0.72 0.0\n",
+      "0.74 0.001004016\n",
+      "0.76 0.0\n",
+      "0.78 0.001004016\n",
+      "0.8 0.001004016\n",
+      "0.82 0.001004016\n",
+      "0.84 0.001004016\n",
+      "0.86 0.0\n",
+      "0.88 0.0\n",
+      "0.9 0.0\n",
+      "0.92 0.0\n",
+      "0.94 0.0\n",
+      "0.96 0.0\n",
+      "0.98 0.0\n",
+      "1.0 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 0\n",
+    "for idx, row in df_p.iterrows():\n",
+    "    print(row['p'], row['P_p'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = sum((elem[0] + elem[1]) for elem in df_p.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "26.499999999000003"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def poisson(n, A, p):\n",
+    "    return (((p * A) ** n) * np.exp(-p * A)) / factorial(n)\n",
+    "\n",
+    "def bayes(p, n, A, P_p, P_n):\n",
+    "    return (poisson(n, A, p) * P_p) / P_n\n",
+    "\n",
+    "\n",
+    "def bayes_cost(df_p, df_n_A):\n",
+    "    \n",
+    "    return sum(p for p in df_p['p'])\n",
+    "    \n",
+    "    return_val = 0\n",
+    "    for idx, row in df_p.iterrows():\n",
+    "        return_val += row['p'] + row['P_p']\n",
+    "    \n",
+    "    \n",
+    "    # need p\n",
+    "    # need A\n",
+    "    # need n\n",
+    "    # need C(p, w)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -2307,6 +2499,31 @@
    "metadata": {
     "collapsed": true
    },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
    "outputs": [],
    "source": []
   },
@@ -2337,7 +2554,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.2"
   },
   "toc": {
    "colors": {
