Upgraded the bayes cost function, still not tested and normal cost not included

--- a/test.ipynb
+++ b/test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -2309,20 +2309,24 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2332,11 +2336,11 @@
     "\n",
     "with open(os.path.join('data', file1)) as f:\n",
     "    array = [[float(x) for x in line.split()] for line in f]\n",
-    "    df_n_A = pd.DataFrame(data=array, columns=['moth_p','n','A'])\n",
+    "    df_n_A = pd.DataFrame(data=array, columns=['n','A','dens'])\n",
     "    \n",
     "with open(os.path.join('data', file2)) as f:\n",
     "    array = [[float(x) for x in line.split()] for line in f]\n",
-    "    df_p = pd.DataFrame(data=array, columns=['p','P_p'])"
+    "    df_p = pd.DataFrame(data=array, columns=['p','P(p)'])"
    ]
   },
   {
@@ -2359,107 +2363,26 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 56,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.0 0.737951807\n",
-      "0.02 0.09437751\n",
-      "0.04 0.047188755\n",
-      "0.06 0.032128514\n",
-      "0.08 0.016064257\n",
-      "0.1 0.015060241\n",
-      "0.12 0.011044177\n",
-      "0.14 0.014056225\n",
-      "0.16 0.009036145\n",
-      "0.18 0.002008032\n",
-      "0.2 0.006024096\n",
-      "0.22 0.001004016\n",
-      "0.24 0.001004016\n",
-      "0.26 0.001004016\n",
-      "0.28 0.0\n",
-      "0.3 0.001004016\n",
-      "0.32 0.0\n",
-      "0.34 0.0\n",
-      "0.36 0.0\n",
-      "0.38 0.0\n",
-      "0.4 0.002008032\n",
-      "0.42 0.001004016\n",
-      "0.44 0.002008032\n",
-      "0.46 0.0\n",
-      "0.48 0.0\n",
-      "0.5 0.0\n",
-      "0.52 0.0\n",
-      "0.54 0.0\n",
-      "0.56 0.0\n",
-      "0.58 0.0\n",
-      "0.6 0.0\n",
-      "0.62 0.0\n",
-      "0.64 0.0\n",
-      "0.66 0.0\n",
-      "0.68 0.0\n",
-      "0.7 0.001004016\n",
-      "0.72 0.0\n",
-      "0.74 0.001004016\n",
-      "0.76 0.0\n",
-      "0.78 0.001004016\n",
-      "0.8 0.001004016\n",
-      "0.82 0.001004016\n",
-      "0.84 0.001004016\n",
-      "0.86 0.0\n",
-      "0.88 0.0\n",
-      "0.9 0.0\n",
-      "0.92 0.0\n",
-      "0.94 0.0\n",
-      "0.96 0.0\n",
-      "0.98 0.0\n",
-      "1.0 0.0\n"
-     ]
-    }
-   ],
    "source": [
-    "a = 0\n",
-    "for idx, row in df_p.iterrows():\n",
-    "    print(row['p'], row['P_p'])"
+    "Cost with Bayes:\n",
+    "$$ C_B(w) = \\Big[ \\sum_{\\rho} P(\\rho | n, A)  \\cdot C(\\rho, w) \\Big] $$\n",
+    "\n",
+    "Apply Bayes' theorem:\n",
+    "$$ C_B(w) = \\Big[ \\sum_{\\rho} \\frac{P(n | A, \\rho) P(\\rho)}{P(n)}  \\cdot C(\\rho, w) \\Big] $$\n",
+    "$$ C_B(w) = \\frac{1}{P(n)} \\Big[ \\sum_{\\rho} P(n | A, \\rho) P(\\rho) \\cdot C(\\rho, w) \\Big] $$\n",
+    "\n",
+    "And from the total probability law:\n",
+    "$$ P(n) = \\Big[ \\sum_{\\rho} P(n | A, \\rho) P(\\rho) \\Big] $$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = sum((elem[0] + elem[1]) for elem in df_p.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "26.499999999000003"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def poisson(n, A, p):\n",
@@ -2468,39 +2391,132 @@
     "def bayes(p, n, A, P_p, P_n):\n",
     "    return (poisson(n, A, p) * P_p) / P_n\n",
     "\n",
-    "\n",
-    "def bayes_cost(df_p, df_n_A):\n",
+    "# A : area (float)\n",
+    "# n_moths : number of moths (int)\n",
+    "# n_flies : number of flies (int)\n",
+    "# cost: cost without bayes (dataframe, has the 'n_flies' and the 'n_moths' columns)\n",
+    "# p_data : data regarding the density probability function (dataframe, has the\n",
+    "#          'p' and 'P(p)' columns)\n",
+    "#\n",
+    "# return an exception if there is no calculated cost without bayes with\n",
+    "# the required number of moths or flies.\n",
+    "#\n",
+    "# If the cost dataframe has several different rows for the same n_moths\n",
+    "# and n_flies, it uses only the last one (expected to be the more 'recent' one)\n",
+    "def bayes_cost(p_data, A, n_moths, n_flies, cost=None):\n",
     "    \n",
-    "    return sum(p for p in df_p['p'])\n",
+    "    cost_b = 0\n",
+    "    norm_factor = 0\n",
+    "    for p in p_data.values:\n",
+    "        local_prob = poisson(n_moths, A, p[0]) * p[1]\n",
+    "        # cost_b += local_prob * normal_cost[('p' == p[0]) and ('n_flies' == n_flies)]\n",
+    "        cost_b += local_prob\n",
+    "        norm_factor += local_prob\n",
     "    \n",
-    "    return_val = 0\n",
-    "    for idx, row in df_p.iterrows():\n",
-    "        return_val += row['p'] + row['P_p']\n",
-    "    \n",
-    "    \n",
-    "    # need p\n",
-    "    # need A\n",
-    "    # need n\n",
-    "    # need C(p, w)"
+    "    # return cost_b / norm_factor\n",
+    "    return cost_b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>p</th>\n",
+       "      <th>P(p)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.737952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.02</td>\n",
+       "      <td>0.094378</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.04</td>\n",
+       "      <td>0.047189</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.06</td>\n",
+       "      <td>0.032129</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.08</td>\n",
+       "      <td>0.016064</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      p      P(p)\n",
+       "0  0.00  0.737952\n",
+       "1  0.02  0.094378\n",
+       "2  0.04  0.047189\n",
+       "3  0.06  0.032129\n",
+       "4  0.08  0.016064"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n_moths = 1\n",
+    "n_flies = 5\n",
+    "A = 120\n",
+    "df_p.head()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.022596611093083106"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bayes_cost(df_p, A, n_moths, n_flies)"
+   ]
   },
   {
    "cell_type": "code",
@@ -2523,7 +2539,9 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
