minor changes to notebook file

--- a/test.ipynb
+++ b/test.ipynb
@@ -2326,7 +2326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -2343,6 +2343,17 @@
     "with open(os.path.join('data', file2)) as f:\n",
     "    array = [[float(x) for x in line.split()] for line in f]\n",
     "    df_p = pd.DataFrame(data=array, columns=['p','P(p)'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "df_p.to_csv('dens.csv')"
    ]
   },
   {
@@ -2469,7 +2480,9 @@
   {
    "cell_type": "code",
    "execution_count": 230,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_costs = pd.read_csv(os.path.join('tests', 'outputs', 'simul_results_cost.csv'), index_col=[0])"
@@ -2478,7 +2491,9 @@
   {
    "cell_type": "code",
    "execution_count": 231,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#df_costs"
@@ -2514,14 +2529,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": 246,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_p.to_csv(os.path.join('data', 'my_densities.csv'), index=False)"
@@ -2604,7 +2623,9 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "vals\n",
@@ -2614,7 +2635,9 @@
   {
    "cell_type": "code",
    "execution_count": 132,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_p = pd.DataFrame(data=[[0, 0.75], [0.5, 0.24], [1.0, 0.01]], index=range(3), columns=['p', 'P(p)'])"
@@ -2634,7 +2657,9 @@
   {
    "cell_type": "code",
    "execution_count": 141,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df_p = pd.DataFrame(data=data, index=range(3), columns=['p', 'P(p)'])"
@@ -2709,7 +2734,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = dict()\n",
@@ -2730,7 +2757,9 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_csv(os.path.join('tests', 'outputs', 'simul_results_mean.csv'), index_col=[0])"
